# cliche

./: .gitignore  COPYING  Makefile.am  NEWS.xml  README  autogen.bash  configure.ac
debian/: changelog  control  rules
src/: .gitignore  Makefile.am  cliche.1  cliche.rl
test/: .gitignore  Makefile.am  r01_closing_at_the_line_start.clichec  r01_closing_at_the_line_start.expected  r02_anchor_after_literal.clichec  r02_anchor_after_literal.expected  r03_percent_after_empty.clichec  r03_percent_after_empty.expected  r04_too_seamless_transitions.clichec  r04_too_seamless_transitions.expected
